lesson3/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: homework
  name: web-server-service
spec:
  selector:
    app: python-server
  ports:
    - protocol: TCP
      port: 8000
      targetPort: http-web-pod
      name: http-web-svc
